依存をキレイに (#2)