@@ -10,23 +10,52 @@ buildscript {
   }
   dependencies {
     classpath "com.nablarch.dev:nablarch-gradle-plugin:${nablarchGradlePluginVersion}"
+    classpath "net.saliman:gradle-cobertura-plugin:2.4.0"
   }
 }
 apply plugin: 'com.nablarch.dev.nablarch-build'
 apply plugin: 'com.nablarch.dev.nablarch-maven-deploy'
 apply plugin: 'com.nablarch.dev.nablarch-sonarqube'
 apply plugin: 'com.nablarch.dev.nablarch-version'
+apply from: 'https://github.com/nablarch/nablarch-gradle-plugin/blob/develop/scripts/cobertura/cobertura-0.0.1.gradle?raw=true'
 
 // ビルド時のJavaバージョンを指定する
 sourceCompatibility=JavaVersion.VERSION_1_6
 targetCompatibility=JavaVersion.VERSION_1_6
 
+configurations {
+  all*.exclude module: 'nablarch-test-support-hereis'
+  all*.exclude module: 'h2'
+  all*.exclude module: 'commons-dbcp'
+  all*.exclude module: 'eclipselink'
+  all*.exclude module: 'jsp-api-2.1-glassfish'
+}
+
 dependencies {
   compile "com.nablarch.framework:nablarch-core-message:${nablarchCoreMessageVersion}"
-
-  testCompile 'com.nablarch.dev:nablarch-test-support:0.0.5'
+  
+  testRuntime "com.nablarch.framework:nablarch-core-repository:${nablarchCoreRepositoryVersion}"
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-all:1.3'
+  
+  // for cobertura
+  testRuntime 'org.slf4j:slf4j-nop:1.7.24'
+}
+
+tasks.sonarRunner {
+  dependsOn = ['coverage']
+}
+
+test {
+
+  jvmArgs(
+      '-XX:PermSize=32m',
+      '-XX:+UseParallelGC',
+      '-Dfile.encoding=UTF-8',
+      '-XX:-UseSplitVerifier'
+  )
+
+  ignoreFailures = true
 }
 
 task wrapper(type: Wrapper) {
